--- a/webgl_st/demo03/13.html
+++ b/webgl_st/demo03/13.html
@@ -50,7 +50,7 @@
         var render = new Render("c");
 
         var shader = new WShader();
-        var wObject = new WCubeObject(gl, shader);
+        var wObject = new WObject(gl, shader, {position: getCube()});
 
         var shader2 = new WShader("vertex-shader-sc2", "fragment-shader-sc2");
         var wObject2 = new WObject(gl, shader2, {position: [50,50,0,   30,30,0,  50,30,0]});
@@ -61,6 +61,58 @@
         //render.addObject(wObject3);
 
         render.render();
+    }
+
+    function getCube(){
+        return [
+            // v0-v1-v2-v3 front
+            50, 50, 50,//0
+            -50,50,50,//1
+            -50,-50,50,//2
+            50,50,50,//0
+            -50,-50,50,//2
+            50,-50,50,//3
+
+            // v0-v3-v4-v5 right
+            50, 50, 50,//0
+            50,-50,50,//3
+            50, 50, -50,//4
+            50, 50, -50,//0
+            50,-50,-50,//4
+            50,50,-50,//5
+
+            // v0-v5-v6-v1 up
+            50, 50, 50,//0
+            50,50,-50,//5
+            -50,50,-50,//6
+            50, 50, 50,//0
+            -50,50,-50,//6
+            -50,50,50,//1
+
+            // v1-v6-v7-v2 left
+            -50, 50, 50,//1
+            -50, 50, -50,//6
+            -50,-50, -50,//7
+            -50, 50, 50,//1
+            -50,-50, -50,//7
+            -50,-50,50,//2
+
+            // v7-v4-v3-v2 bottom
+            -50,-50,-50,//7
+            50,-50,-50,//4
+            50,-50,50,//3
+            -50,-50,-50,//7
+            50,-50,50,//3
+            -50,-50,50,//2
+
+            // v4-v7-v6-v5 back
+            50,-50,-50,//4
+            -50,-50,-50,//7
+            -50, 50, -50,//6
+            50,-50,-50,//4
+            -50, 50, -50,//6
+            50,50,-50,//5
+        ];
     }
 
 </script>
